# Sentori

./: .gitignore  CHANGELOG.md  LICENSE  PRD.md  README.md  SECURITY.md  action.yml  package-lock.json  package.json
demo-video/: README.md  record.sh  trim.sh
demo-vulnerable-agent/: README.md
docs/: COMPETITIVE-ANALYSIS.md  ENV-ISOLATION-DESIGN.md  QA-REVIEW.md  SCORING-REVIEW-ALPHA.md  SCORING-REVIEW-BETA.md  SCORING-REVIEW-FINAL.md  SCORING-REVIEW.md  SCORING.md  agentic-ai-security-architecture.md  agentic-ai-threats.md  mcp-auditor-report.md  medium-cisco-response.md  sentori-yml.md
marketing/: hackernews-post.md  medium-article.md  reddit-post.md  x-thread.md
research/: a2a-threat-model.md
sentori-gui/: .gitignore  index.html  package-lock.json  package.json
sentori-gui/src-tauri/: Cargo.toml  tauri.conf.json
sentori-gui/src-tauri/src/: lib.rs  main.rs
src/: cli.ts  discover.ts  index.ts  scanner-registry.ts  types.ts  watcher.ts
tests/: a2a-security-scanner.test.ts  agent-config-auditor.test.ts  agentshield-security-fixes-2026.test.ts  apply-config.test.ts  cc-bos-cli-redteam.test.ts  cc-bos-red-team.test.ts  channel-surface-auditor-scan.test.ts  channel-surface-auditor.test.ts  custom-rules-scanner.test.ts  defense-analyzer.test.ts  environment-isolation-auditor.test.ts  git-utils.test.ts  ignore-parser.test.ts  injection-patterns-phase15.test.ts  language-register-scanner.test.ts  lockfile-parser.test.ts  mcp-sampling-abuse-scanner.test.ts  mcp-server-auditor-prototype.test.ts  npm-attestation-scanner.test.ts  openclaw-config-auditor.test.ts  (+18 more)
(+109 files in other folders)
