[package]
name = "sentori-gui"
version = "0.1.0"
description = "Sentori GUI — AI Agent Security Scanner Desktop App"
authors = ["Nexylore"]
license = "MIT"
repository = "https://github.com/TakumaLee/Sentori"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
name = "sentori_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"  # Strip expensive panic clean-up logic
codegen-units = 1  # Compile crates one at a time so the compiler can optimize better
lto = true  # Enables link to optimizations
opt-level = "s"  # Optimize for binary size
strip = true  # Automatically strip symbols from the binary
